Fix accessibility issues

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@
 }
 
 * {
-	color: var(--color-black);
 	font-family: "Trebuchet MS", sans-serif;
 	margin: 0;
 	padding: 0;
@@ -20,6 +19,7 @@
 main {
 	align-items: center;
 	box-sizing: border-box;
+	color: var(--color-black);
 }
 
 header {
@@ -68,11 +68,10 @@ article {
 }
 
 input {
-	height: 0;
-	visibility: hidden;
+	margin-left: -10000px;
 }
 
-label {
+article label {
 	cursor: pointer;
 	padding: var(--space-small) var(--space-medium);
 	position: relative;
@@ -96,8 +95,17 @@ input:checked ~ label::before {
 	width: 1.5rem;
 }
 
+input:checked:focus-visible ~ label::before {
+	background-color: var(--color-black);
+	transition: background-color 0.2s ease-out;
+}
+
 input:focus-visible ~ label {
 	transform: scale(1.1, 1.1);
+}
+
+input:focus-visible ~ label svg {
+	color: var(--color-accent-2);
 }
 
 button {
