--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ aside {
 	padding: var(--space-small);
 }
 
-@media only screen and (min-width: 64em) {
+@media only screen and (width >= 64em) {
 	form {
 		display: flex;
 	}
